deploy/api/networking.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc-stable
  labels:
    app: api
spec:
  ports:
    - name: http-api
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: api
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc-canary
  labels:
    app: api
spec:
  ports:
    - name: http-api
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: api
  type: LoadBalancer
