deploy/api/istio.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - "*"
  gateways:
    - api
  http:
    - route:
        - destination:
            host: api
